--- a/Pages/Admin/Create.cshtml
+++ b/Pages/Admin/Create.cshtml
@@ -15,27 +15,38 @@
 <h2>@Localizer["Enter your details:"]</h2>
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Admin.LastName" class="control-label">@Localizer["Last Name"]</label>
-                <input asp-for="Admin.LastName" class="form-control" />
-                <span asp-validation-for="Admin.LastName" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Admin.LastName" class="control-label">@Localizer["Last Name"]</label>
+                    <input asp-for="Admin.LastName" class="form-control" />
+                    <span asp-validation-for="Admin.LastName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Admin.FirstMidName" class="control-label">@Localizer["First Name"]</label>
-                <input asp-for="Admin.FirstMidName" class="form-control" />
-                <span asp-validation-for="Admin.FirstMidName" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Admin.FirstMidName" class="control-label">@Localizer["First Name"]</label>
+                    <input asp-for="Admin.FirstMidName" class="form-control" />
+                    <span asp-validation-for="Admin.FirstMidName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Admin.HireDate" class="control-label">@Localizer["Hire Date"]</label>
-                <input asp-for="Admin.HireDate" class="form-control" />
-                <span asp-validation-for="Admin.HireDate" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Admin.HireDate" class="control-label">@Localizer["Hire Date"]</label>
+                    <input asp-for="Admin.HireDate" class="form-control" />
+                    <span asp-validation-for="Admin.HireDate" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="col-12">
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
             </div>
         </form>
+        @*<form method="post">
+
+        </form>*@
     </div>
 </div>
 
