--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -17,98 +17,119 @@
 
                     <h4>@Localizer["Company"]</h4>
                     <hr />
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form method="post">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <input type="hidden" asp-for="Company.ID" />
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Title" class="control-label">Title</h5>
-                                    <input asp-for="Company.Title" class="form-control" />
-                                    <span asp-validation-for="Company.Title" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Rating" class="control-label">Rating</h5>
-                                    <input asp-for="Company.Rating" class="form-control" />
-                                    <span asp-validation-for="Company.Rating" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.EnrollmentDate" class="control-label">Enrollment Date</h5>
-                                    <input asp-for="Company.EnrollmentDate" class="form-control" />
-                                    <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Thematics" class="control-label">Тематика</h5>
-                                    <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
-                                        <option selected>@Localizer["Choose the topic of your company"]</option>
-                                        <option>@Localizer["Education"]</option>
-                                        <option>@Localizer["Животные"]</option>
-                                        <option>@Localizer["Human rights"]</option>
-                                        <option>@Localizer["Nature"]</option>
-                                        <option>@Localizer["Culture"]</option>
-                                        <option>@Localizer["Game"]</option>
-                                        <option>@Localizer["Other"]</option>
-                                    </select>
-                                    <span asp-validation-for="Company.Thematics" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Bonus" class="control-label">Bonus</h5>
-                                    <input asp-for="Company.Bonus" class="form-control" />
-                                    <span asp-validation-for="Company.Bonus" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Description" class="control-label">Description</h5>
-                                    <textarea asp-for="Company.Description" class="form-control"></textarea>
-                                    <span asp-validation-for="Company.Description" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Images" class="control-label">Images</h5>
-                                    <div class="mb-3">
-                                        <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-                                        <input class="form-control" type="file" id="formFileMultiple" multiple>
-                                    </div>
-                                    @*<div id="drop-area">
-                                            <div class="my-form">
-                                                <label asp-for="Company.Images" class="control-label"></label>
-                                                <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
-                                                <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                                                <span asp-validation-for="Company.Images" class="text-danger"></span>
-                                                <label class="button">@Localizer["Выбрать изображения"]</label>
-                                            </div>
-                                        </div>*@
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Video" class="control-label">Video</h5>
-                                    <input asp-for="Company.Video" class="form-control" />
-                                    <span asp-validation-for="Company.Video" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Topic" class="control-label">Topic</h5>
-                                    <input asp-for="Company.Topic" class="form-control" />
-                                    <span asp-validation-for="Company.Topic" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.News" class="control-label">News</h5>
-                                    <textarea asp-for="Company.News" class="form-control"></textarea>
-                                    <span asp-validation-for="Company.News" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Price" class="control-label">Price</h5>
-                                    <input asp-for="Company.Price" class="form-control" />
-                                    <span asp-validation-for="Company.Price" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <h5 asp-for="Company.Tags" class="control-label">Tags</h5>
-                                    <input asp-for="Company.Tags" class="form-control" />
-                                    <span asp-validation-for="Company.Tags" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Save" class="btn btn-primary btn-lg btn-block" />
-                                </div>
-                            </form>
+                    <form class="row g-3">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="Company.ID" />
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Title" class="control-label">Title</h5>
+                                <input asp-for="Company.Title" class="form-control" />
+                                <span asp-validation-for="Company.Title" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-
+                        @*<div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Rating" class="control-label">Rating</h5>
+                                <input asp-for="Company.Rating" class="form-control" />
+                                <span asp-validation-for="Company.Rating" class="text-danger"></span>
+                            </div>
+                        </div>*@
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.EnrollmentDate" class="control-label">Enrollment Date</h5>
+                                <input asp-for="Company.EnrollmentDate" class="form-control" />
+                                <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Thematics" class="control-label">Тематика</h5>
+                                <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
+                                    <option selected>@Localizer["Choose the topic of your company"]</option>
+                                    <option>@Localizer["Education"]</option>
+                                    <option>@Localizer["Animals"]</option>
+                                    <option>@Localizer["Human rights"]</option>
+                                    <option>@Localizer["Nature"]</option>
+                                    <option>@Localizer["Culture"]</option>
+                                    <option>@Localizer["Game"]</option>
+                                    <option>@Localizer["Other"]</option>
+                                </select>
+                                <span asp-validation-for="Company.Thematics" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Bonus" class="control-label">Bonus</h5>
+                                <input asp-for="Company.Bonus" class="form-control" />
+                                <span asp-validation-for="Company.Bonus" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Description" class="control-label">Description</h5>
+                                <textarea asp-for="Company.Description" class="form-control"></textarea>
+                                <span asp-validation-for="Company.Description" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Images" class="control-label">Images</h5>
+                                <div class="mb-3">
+                                    @*<label for="formFileMultiple" class="form-label">Multiple files input example</label>*@
+                                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                                </div>
+                                @*<div id="drop-area">
+                                        <div class="my-form">
+                                            <label asp-for="Company.Images" class="control-label"></label>
+                                            <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
+                                            <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+                                            <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                            <label class="button">@Localizer["Выбрать изображения"]</label>
+                                        </div>
+                                    </div>*@
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Video" class="control-label">Video</h5>
+                                <input asp-for="Company.Video" class="form-control" />
+                                <span asp-validation-for="Company.Video" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Topic" class="control-label">Topic</h5>
+                                <input asp-for="Company.Topic" class="form-control" />
+                                <span asp-validation-for="Company.Topic" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <h5 asp-for="Company.News" class="control-label">News</h5>
+                                <textarea asp-for="Company.News" class="form-control"></textarea>
+                                <span asp-validation-for="Company.News" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Price" class="control-label">Price</h5>
+                                <input asp-for="Company.Price" class="form-control" />
+                                <span asp-validation-for="Company.Price" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <h5 asp-for="Company.Tags" class="control-label">Tags</h5>
+                                <input asp-for="Company.Tags" class="form-control" />
+                                <span asp-validation-for="Company.Tags" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input type="submit" value="Save" />
+                            </div>
+                        </div>
+                    </form>
                     <div>
                         <a asp-page="./Index">@Localizer["Back to List"]</a>
                     </div>
