--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -16,52 +16,73 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="User.LastName" class="control-label">@Localizer["Last Name"]</label>
-                <input asp-for="User.LastName" class="form-control" />
-                <span asp-validation-for="User.LastName" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.LastName" class="control-label">@Localizer["Last Name"]</label>
+                    <input asp-for="User.LastName" class="form-control" />
+                    <span asp-validation-for="User.LastName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.FirstMidName" class="control-label">@Localizer["First Name"]</label>
-                <input asp-for="User.FirstMidName" class="form-control" />
-                <span asp-validation-for="User.FirstMidName" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.FirstMidName" class="control-label">@Localizer["First Name"]</label>
+                    <input asp-for="User.FirstMidName" class="form-control" />
+                    <span asp-validation-for="User.FirstMidName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.HireDate" class="control-label">@Localizer["Hire Date"]</label>
-                <input asp-for="User.HireDate" class="form-control" />
-                <span asp-validation-for="User.HireDate" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.HireDate" class="control-label">@Localizer["Hire Date"]</label>
+                    <input asp-for="User.HireDate" class="form-control" />
+                    <span asp-validation-for="User.HireDate" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.Age" class="control-label">@Localizer["Age"]</label>
-                <input asp-for="User.Age" class="form-control" />
-                <span asp-validation-for="User.Age" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.Age" class="control-label">@Localizer["Age"]</label>
+                    <input asp-for="User.Age" class="form-control" />
+                    <span asp-validation-for="User.Age" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.Country" class="control-label">@Localizer["Country"]</label>
-                <input asp-for="User.Country" class="form-control" />
-                <span asp-validation-for="User.Country" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.Country" class="control-label">@Localizer["Country"]</label>
+                    <input asp-for="User.Country" class="form-control" />
+                    <span asp-validation-for="User.Country" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.City" class="control-label">@Localizer["City"]</label>
-                <input asp-for="User.City" class="form-control" />
-                <span asp-validation-for="User.City" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.City" class="control-label">@Localizer["City"]</label>
+                    <input asp-for="User.City" class="form-control" />
+                    <span asp-validation-for="User.City" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.Email" class="control-label">@Localizer["Email"]</label>
-                <input asp-for="User.Email" class="form-control" />
-                <span asp-validation-for="User.Email" class="text-danger"></span>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="User.Email" class="control-label">@Localizer["Email"]</label>
+                    <input asp-for="User.Email" class="form-control" />
+                    <span asp-validation-for="User.Email" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="User.AboutMe" class="control-label">@Localizer["About Me"]</label>
-                <input asp-for="User.AboutMe" class="form-control" />
-                <span asp-validation-for="User.AboutMe" class="text-danger"></span>
+            <div class="col-12">
+                <div class="form-group">
+                    <label asp-for="User.AboutMe" class="control-label">@Localizer["About Me"]</label>
+                    <input asp-for="User.AboutMe" class="form-control" />
+                    <span asp-validation-for="User.AboutMe" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="col-12">
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
             </div>
         </form>
+        @*<form method="post">
+
+        </form>*@
     </div>
 </div>
 
